Update workout.js to:     * Remove delay on animations     * Animate workout table slide down     * Animate date off screen on back button click     * Animate workout form to slide up and down         on edit button click Update workout.css to edit height of workout table Todo:     * Fix workout form cell spacing     * Add chart to workout view

--- a/workout/static/workout.css
+++ b/workout/static/workout.css
@@ -176,12 +176,19 @@ body {
 #content {
 }
 
-#workout-table-border, #workout-chart {
+#workout-table-border {
+    display:none;
     width:60%;
     margin:auto;
     border:1px solid #d8d8d8;
-    padding:3%;
+    border-radius: 0.5em;
+    padding:1% 1%;
     background:white;
+}
+
+#workout-table {
+    height:100%;
+    overflow-y: scroll;
 }
 
 .workout-edit, .submit-edit,
